Linked style.css to index.html and fixed color contrast on footer

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ nav a:hover {
 .footer-links a {
     display: block;
     margin-bottom: 10px;
-    color: #2f855a;
+    color: #0C4F29;
 }
 
 /* Align-self property sourced from W3C Schools */
